{
    "name": "InputMapping",
    "maps": [
        {
            "name": "Game",
            "id": "65ac26fd-cd8d-45ae-a7d9-3c5ae38672aa",
            "actions": [
                {
                    "name": "StepForward",
                    "type": "Button",
                    "id": "97518737-f6e5-4e52-b2f7-e53d1d2fc506",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Auto",
                    "type": "Button",
                    "id": "92a46dc0-453a-4666-9de8-883c06876c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastForward",
                    "type": "Button",
                    "id": "632fac5c-1011-4127-9d53-2b8462d2d357",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "85569b9c-0c57-4872-8a36-f99714b4e4fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "a92328a6-5459-4764-be99-02e914f88d25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSave",
                    "type": "Button",
                    "id": "627177ba-de96-4285-a826-a5df6e6815fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickLoad",
                    "type": "Button",
                    "id": "c9c9db54-8ca8-49ab-b089-2ce20add2fcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDialogue",
                    "type": "Button",
                    "id": "9c2946bf-47fe-46f6-ab70-58e3b18b337c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowLog",
                    "type": "Button",
                    "id": "544b3e00-c037-40d4-803e-3494c1bec7f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5362a006-d294-4d89-827b-d789d73a8b9c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5acc9ceb-9d7e-48a6-b9ce-24b7cc14cb43",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "420ecd55-0df9-4d09-85d0-8b22e2bf0548",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f404172-ba2b-436d-9d5c-01d98f682bba",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feade573-fff2-41dd-bd5c-bb46cfc47039",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Auto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf7c3290-d63a-4767-9a4c-fc116c9ad206",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2f14355-a8c3-4cf1-ab58-418da3df5f21",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f9d881f-a173-41ee-971e-d71410cf0225",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36c4d00d-fb1a-4cbe-8f77-fc78b65a8232",
                    "path": "<Keyboard>/f9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09b717e5-ac69-44c7-aabd-7e9281d379e6",
                    "path": "<Keyboard>/f10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c3de28e-b588-42e0-8d28-a985558f3268",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea5e4dda-97b4-43d8-b433-aa4a3eab5bc5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4e08a8e8-86e4-410b-9f73-bfad090db1b9",
            "actions": [
                {
                    "name": "LeaveView",
                    "type": "Button",
                    "id": "619a9afb-57ff-40d0-bdd2-e72d1959274e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4793c7e1-6f36-4028-9194-7eca7a7265c5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "421fffe9-07b0-4b1f-a881-c1f91ad107f5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Editor",
            "id": "372c8054-31c8-4142-a336-8d7485bd1ce0",
            "actions": [
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "ba4a6554-acba-4119-9cce-dd67f109f99f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BeginChapter",
                    "type": "Button",
                    "id": "b6796573-2607-4ef6-b06d-6958c3b7c74c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousChapter",
                    "type": "Button",
                    "id": "3b6ac5b3-c8f4-4788-8ee3-57d0f686973a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextChapter",
                    "type": "Button",
                    "id": "b15aab3f-f151-4d29-87f1-d4b6880744be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReloadScripts",
                    "type": "Button",
                    "id": "6728966f-e7b3-4cbf-801b-09e49a36aa4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RerunAction",
                    "type": "Button",
                    "id": "50528df2-f11a-4d9f-a581-73ac487e1006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19c7c4d3-be2c-4baf-87b4-052044f1a445",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3eda912-6dba-4b23-b06c-15092b16672d",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeginChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61c63c47-e51c-44f0-9c5c-8efd241955a1",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d6292d8-2a4f-4f68-9ffa-027a4903d785",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36ca22a3-f08f-4d32-8400-56dfbad78dab",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScripts",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ff6577-3893-48e5-96cb-04d8c6577f97",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RerunAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Always",
            "id": "15432f44-28e6-4444-98f2-02660e8764e3",
            "actions": [
                {
                    "name": "ToggleFullScreen",
                    "type": "Button",
                    "id": "55d742f2-1c5d-40e5-8984-6be8a8a681c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d125ba94-d955-47b1-9b3f-b3b88108beb5",
                    "path": "<Keyboard>/f11",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFullScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}